--- a/var/themes_repository/abt__unitheme2/css/addons/mwl_xlsx/styles.less
+++ b/var/themes_repository/abt__unitheme2/css/addons/mwl_xlsx/styles.less
@@ -1,2 +1,12 @@
 /* Styles for mwl_xlsx addon */
 
+.mwl_xlsx-export {
+    display: inline-block;
+}
+
+.mwl_xlsx-export img {
+    width: 20px;
+    height: 20px;
+    vertical-align: middle;
+}
+
