Use standard list template for media list management

--- a/var/themes_repository/abt__unitheme2/css/addons/mwl_xlsx/styles.less
+++ b/var/themes_repository/abt__unitheme2/css/addons/mwl_xlsx/styles.less
@@ -10,3 +10,13 @@
     vertical-align: middle;
 }
 
+.ty-simple-list__item {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+}
+
+.ty-simple-list__actions > a {
+    margin-left: 5px;
+}
+
