User settings: price change in xlsx

--- a/var/themes_repository/abt__unitheme2/css/addons/mwl_xlsx/styles.less
+++ b/var/themes_repository/abt__unitheme2/css/addons/mwl_xlsx/styles.less
@@ -10,3 +10,10 @@
     vertical-align: middle;
 }
 
+/* Hide sorting on mwl_xlsx view page */
+.mwl_xlsx-view-page {
+    .ty-sort-container {
+        display: none;
+    }
+}
+
