Add tooltip to add button

--- a/var/themes_repository/abt__unitheme2/css/addons/mwl_xlsx/styles.less
+++ b/var/themes_repository/abt__unitheme2/css/addons/mwl_xlsx/styles.less
@@ -17,3 +17,10 @@
     }
 }
 
+.mwl_xlsx-control {
+    margin-top: 10px;
+    align-items: center;
+    .ty-btn {
+        margin: 5px 0;
+    }
+}
