feat: Switch to usd on checkout, fix request price button

--- a/var/themes_repository/abt__unitheme2/css/addons/mwl_xlsx/styles.less
+++ b/var/themes_repository/abt__unitheme2/css/addons/mwl_xlsx/styles.less
@@ -19,7 +19,13 @@
     align-items: center;
     .ty-btn {
         margin: 5px 0;
+        min-width: 120px !important;
     }
+}
+
+// product page
+.ut2-pb__right-wrapper .mwl_xlsx-control .ty-btn {
+    min-width: 320px !important;
 }
 
 .request-price-check-btn {
