Mobile media lists button, smaller request price button size

--- a/var/themes_repository/abt__unitheme2/css/addons/mwl_xlsx/styles.less
+++ b/var/themes_repository/abt__unitheme2/css/addons/mwl_xlsx/styles.less
@@ -1,3 +1,7 @@
+/* show icon on mobile header */
+.ty-wishlist__a {
+    display: flex !important;
+}
 .mwl_xlsx-export {
     display: inline-block;
 }
@@ -30,4 +34,6 @@
 
 .request-price-check-btn {
     margin-left: 0 !important;
+    padding: 0 5px !important;
+    height: 26px !important;
 }
