Change usergroups names

--- a/var/themes_repository/abt__unitheme2/css/addons/mwl_xlsx/styles.less
+++ b/var/themes_repository/abt__unitheme2/css/addons/mwl_xlsx/styles.less
@@ -55,16 +55,16 @@
 /* Status labels */
 .mwl-status-label {
     transition: background 0.5s ease;
-    &.bronze { .status-gradient(#cd7f32, #a97142); }
-    &.silver { .status-gradient(#dcdcdc, #a9a9a9); }
-    &.gold { .status-gradient(#ffd700, #daa520); }
-    &.platinum { .status-gradient(#e5e4e2, #b5b5b5); }
+    &.Local { .status-gradient(#cd7f32, #a97142); }
+    &.National { .status-gradient(#dcdcdc, #a9a9a9); }
+    &.Continental { .status-gradient(#ffd700, #daa520); }
+    &.Global { .status-gradient(#e5e4e2, #b5b5b5); }
 
     &:hover {
         color: #fff;
-        &.bronze { .status-gradient(#a97142, #cd7f32); }
-        &.silver { .status-gradient(#a9a9a9, #dcdcdc); }
-        &.gold { .status-gradient(#daa520, #ffd700); }
-        &.platinum { .status-gradient(#b5b5b5, #e5e4e2); }    
+        &.Local { .status-gradient(#a97142, #cd7f32); }
+        &.National { .status-gradient(#a9a9a9, #dcdcdc); }
+        &.Continental { .status-gradient(#daa520, #ffd700); }
+        &.Global { .status-gradient(#b5b5b5, #e5e4e2); }    
     }
 }
