feat: extend backand orders list: products, messages

--- a/design/backend/css/addons/mwl_xlsx/styles.less
+++ b/design/backend/css/addons/mwl_xlsx/styles.less
@@ -60,3 +60,28 @@
     white-space: nowrap;
 }
 
+/* Orders list columns */
+.mwl-xlsx-order-items {
+    list-style: none;
+    margin: 0;
+    padding: 0;
+}
+
+.mwl-xlsx-order-items__item {
+    line-height: 1.3;
+}
+
+.mwl-xlsx-order-messages-count {
+    display: inline-block;
+    min-width: 1.5em;
+    text-align: center;
+}
+
+.mwl-xlsx-order-messages__unread {
+    display: inline-block;
+    margin-left: 6px;
+    font-size: 11px;
+    font-weight: 600;
+    text-transform: uppercase;
+}
+
