feat: Show last message as title on messages link

--- a/design/backend/css/addons/mwl_xlsx/styles.less
+++ b/design/backend/css/addons/mwl_xlsx/styles.less
@@ -77,6 +77,17 @@
     text-align: center;
 }
 
+.mwl-xlsx-order-messages-link {
+    display: inline-flex;
+    align-items: center;
+}
+
+.mwl-xlsx-order-messages-link__total {
+    font-weight: 600;
+    min-width: 1.5em;
+    text-align: center;
+}
+
 .mwl-xlsx-order-messages__unread {
     display: inline-block;
     margin-left: 6px;
