fix: Make last messages tooltips instead of title, highlight side

--- a/var/themes_repository/abt__unitheme2/css/addons/mwl_xlsx/styles.less
+++ b/var/themes_repository/abt__unitheme2/css/addons/mwl_xlsx/styles.less
@@ -92,3 +92,28 @@
         display: none !important;
     }
 }
+
+/* Frontend orders list */
+.ty-orders-search {
+
+
+  .mwl-xlsx-order-messages-link {
+    text-decoration: none;
+
+    &:hover,
+    &:focus {
+        background-color: var(--ut2-warning-background-hover, fade(#428bca, 24%));
+    }
+
+    &.ty-text-warning {
+      color: var(--ut2-warning-color, #f0ad4e);
+      &:hover,
+      &:focus {
+          background-color: var(--ut2-warning-background-hover, fade(#f0ad4e, 24%));
+      }
+      
+      }
+
+}
+
+}
