fix styles for buttons

--- a/var/themes_repository/abt__unitheme2/css/addons/mwl_xlsx/styles.less
+++ b/var/themes_repository/abt__unitheme2/css/addons/mwl_xlsx/styles.less
@@ -24,6 +24,21 @@
   .ty-btn {
     margin: 5px 0;
     min-width: 36px !important;
+    &:hover {
+      color: var(--ut2-primary-color, #333);
+    }
+  }
+}
+
+.ut2-variations-list {
+  .mwl_xlsx-control .ty-btn {
+    padding-left: 8px;
+  }
+  .request-price-check-btn {
+    display: none;
+  }
+  .xlsx-hint {
+    display: none;
   }
 }
 
