fix: change request price SLA, wallet system css

--- a/var/themes_repository/abt__unitheme2/css/addons/mwl_xlsx/styles.less
+++ b/var/themes_repository/abt__unitheme2/css/addons/mwl_xlsx/styles.less
@@ -231,3 +231,8 @@
 #content_description:not(.mwl-description-collapsed) .mwl-description-toggle::after {
   transform: rotate(180deg);
 }
+
+/* wallet system */
+.test_button_blick {
+  .ty-btn__primary() !important;
+}
