fix: hide add to list button from grid-list

--- a/var/themes_repository/abt__unitheme2/css/addons/mwl_xlsx/styles.less
+++ b/var/themes_repository/abt__unitheme2/css/addons/mwl_xlsx/styles.less
@@ -30,6 +30,11 @@
   }
 }
 
+.grid-list .mwl_xlsx-control {
+  /* TODO: show .ut2-icon-article instead of display: none */
+  display: none;
+}
+
 .ut2-variations-list {
   .mwl_xlsx-control .ty-btn {
     padding-left: 8px;
